--- a/greybox/pages/full.html
+++ b/greybox/pages/full.html
@@ -618,7 +618,7 @@
 					</div>
 					<div class="col-sm-8">
 						<article class="tile tile-hybrid tile-medium palette-white">
-							<a href="/work" style="min-height: 990px;">
+							<a href="/work">
 								<p>
 									<img src="../img/tilex2x.png" class="" alt="">
 								</p>
@@ -703,6 +703,23 @@
 						</article>
 	        </div><!--/tile-->
 	      </div><!--/row -->
+
+				<!-- <div class="row">
+					REFERENCE LINK
+					http://www.backcountry.com/sc/welcome-to-fall?INT_ID=IB19995
+					<div class="col-sm-12 full-para-tile">
+						<article class="tile tile-large tile-hybrid">
+							<a href="#" style="min-height: 988px;">
+								<p><img src="../img/hero-single-2.png"></p>
+								<div class="tile-excerpt">
+									<h5 class="palette-teal" style="text-transform:uppercase;">Category</h5>
+									<h2 class="tile-title">A Passionate Team</h2>
+									<p>Our global team represents the best and most talented leaders in their crafts. Our clients can expect passionate, inspired teams to collaborate with them to create brilliant solutions.</p>
+								</div>
+							</a>
+						</article>
+					</div>
+				</div> -->
 
 			</div><!-- /projects -->
 		</div><!-- /container -->
