--- a/greybox/pages/single.html
+++ b/greybox/pages/single.html
@@ -136,7 +136,7 @@
 					<p>It doesn’t matter if you’re a new designer, freelancer, or head of UX at a huge agency—you should view yourself as a business and craft your own personal brand that reflects your personality, communicates what you’re capable of, and establishes you as an expert.</p>
 					<p>One low-cost, high-leverage method to get your brand out there: content marketing. Content doesn’t just include blog posts—it’s also podcasts, videos, and infographics. And by sharing them, you’re providing value to people who will view you as an expert in your field and be more likely to remember your brand.</p>
 
-					<figure class="quote palette-blue">
+					<figure class="quote">
 						<blockquote class="h2">You should view yourself as a business and craft your own personal brand.</blockquote>
 					</figure>
 					<p>Some of the world’s biggest brands are now turning to content marketing to draw in potential customers, employing whole teams dedicated to writing captivating articles for readers and creating the best audiovisual content. This strengthens the trust between brand and consumer, which leads to sales later down the line.</p>
@@ -146,7 +146,7 @@
 					<p>This is why so many designers write about their work in addition to just showing their work. Write about your personal experiences. Or maybe your productivity. Perhaps even the way you lay out your desk.</p>
 					<p>Whatever you decide to write about, content marketing is a great way to build up an audience of your own. Content marketing helps you shape your personal brand and gain new design opportunities.</p>
 					<h3>Getting started with a blog of your own</h3>
-					<figure class="quote palette-blue">
+					<figure class="quote">
 						<blockquote class="h2">Crafting a brand with content marketing is a fantastic way to build a community.</blockquote>
 					</figure>
 					<p>When you start out, your audience may only be a handful of other designers, but if you carry on you’re likely to spread your reach and get noticed.</p>
@@ -158,7 +158,7 @@
 					<p>The design community might be looking for another awesome timelapse. Or maybe there’s a demand for a new design podcast.</p>
 					<h3>Think about what happens after they leave</h3>
 					<p>Visitors should remember your personal brand after they’ve left your site. If you want to keep people coming back, consider building an email list so you can remind them that you’re still around—you can’t expect people to do that by themselves.</p>
-					<figure class="quote palette-blue">
+					<figure class="quote">
 						<blockquote class="h2">Write content while you are designing.</blockquote>
 					</figure>
 					<p>By collecting the emails of visitors, you’re able to send out content digests every time you publish, whether that’s weekly or monthly. Maybe you could even put together a curated list of design articles from around the web.</p>
@@ -184,7 +184,7 @@
 						<li>What the future holds for you</li>
 					</ul>
 					<p>Help readers understand what’s important to you as a designer. Let them know what kind of role design has in your life and/or company. What are you working on now, and how can you improve the way you do things?</p>
-					<figure class="quote palette-blue">
+					<figure class="quote">
 						<blockquote class="h2">There's nothing stopping you from crafting an amazing brand for yourself.</blockquote>
 					</figure>
 					<p><a href="#">Being honest about what’s not working so well can boost your personal brand</a>. Life isn’t easy, and if you’re honest about the struggles you encounter, you’re sure to find support from readers in a similar position.</p>
