long time no see
added and changes colors and mobile tile setups

--- a/greybox/pages/index.html
+++ b/greybox/pages/index.html
@@ -1469,6 +1469,12 @@
 					</span>
 					<span class="name">Chrome</span>
 			</div>
+			<div class="col-xs-6 col-sm-2">
+				<span class="icon">
+					<path xmlns="http://www.w3.org/2000/svg" d="M11.3,0L8.7,3.5h1.8v8.8H1.7V1.7H7c0.5,0,0.8-0.4,0.8-0.8C7.8,0.4,7.4,0,7,0H0.8C0.4,0,0,0.4,0,0.8v12.3 C0,13.6,0.4,14,0.8,14h10.5c0.5,0,0.8-0.4,0.8-0.8V3.5H14L11.3,0z M3.8,5.3H8.4v1.2H3.8V5.3z M3.8,8H8.4v1.2H3.8V8zz"/>
+					<span class="name">Awwwards</span>
+				</span>
+			</div>
 
 			<div class="col-xs-6 col-sm-2">
 					<span class="icon">
