rollback to: ***before xmas***

--- a/greybox/pages/new-order.html
+++ b/greybox/pages/new-order.html
@@ -734,7 +734,7 @@
 				<div class="row">
 	        <div class="col-sm-12">
 	          <article class="tile tile-hybrid tile-large palette-white">
-							<a href="/studios/people"><!-- style="min-height: 988px;"-->
+							<a href="/studios/people" style="min-height: 988px;">
 								<p>
 									<img src="../img/tilex2x.png">
 								</p>
@@ -883,7 +883,7 @@
 			<footer class="footer" itemscope="" itemtype="http://schema.org/Organization">
 				<!-- <span id="back-top"><a href="#top"><i class="material-icons">keyboard_arrow_up</i></a></span> -->
 				<div class="row">
-					<a class="footer-brand col-xs-12 col-sm-2" href="#" itemprop="name"><!-- JOEL<strong>DOMBEK</strong> -->
+					<a class="footer-brand col-xs-6 col-sm-2" href="#" itemprop="name"><!-- JOEL<strong>DOMBEK</strong> -->
 					<img src="../img/logo.png" style="width: auto;max-height:75px;padding: 0 25px;"></a>
           <!-- <div class="col-xs-6 col-sm-2">
           	<a href="http://www.joeldombek.com/contact/"><strong itemprop="name">Contact</strong></a><br>
@@ -926,7 +926,7 @@
 							<div class="col-sm-6 col-xs-12">
 								<p class="text-right">
 									JOEL<strong>DOMBEK</strong><br class="hidden-xs"/>
-									<small>V4.12.22.10.3<br class="hidden-xs"/> &copy; 2016</small></p>
+									<small>V4.12.08.11.47<br class="hidden-xs"/> &copy; 2016</small></p>
 									<br/><br/><br/>
 							</div>
 
@@ -971,12 +971,12 @@
 				<span class="resultHint">Results: <strong>4</strong></span>
 
 				<div class="row results-list-row">
-					<div class="col-md-4 col-xs-12">
+					<div class="col-md-2 col-xs-12">
 						<a class="post-image-link" href="#">
 							<img src="../img/tilex2x.png">
 						</a>
 					</div><!-- /col-xs-2 -->
-					<div class="col-md-8 col-xs-12">
+					<div class="col-md-10 col-xs-12">
 						<article class="tile tile-text">
 							<header class="tile-header">
 								<p><small>Branding </small></p>
@@ -991,12 +991,12 @@
 				</div><!-- result-list-row --><br/>
 
 				<div class="row results-list-row">
-					<div class="col-md-4 col-xs-12">
+					<div class="col-md-2 col-xs-12">
 						<a class="post-image-link" href="#">
 							<img src="../img/tilex2x.png">
 						</a>
 					</div><!-- /col-xs-2 -->
-					<div class="col-md-8 col-xs-12">
+					<div class="col-md-10 col-xs-12">
 						<article class="tile tile-text">
 							<header class="tile-header">
 								<p><small>Branding </small></p>
@@ -1011,12 +1011,12 @@
 				</div><!-- result-list-row --><br/>
 
 				<div class="row results-list-row">
-					<div class="col-md-4 col-xs-12">
+					<div class="col-md-2 col-xs-12">
 						<a class="post-image-link" href="#">
 							<img src="../img/tilex2x.png">
 						</a>
 					</div><!-- /col-xs-2 -->
-					<div class="col-md-8 col-xs-12">
+					<div class="col-md-10 col-xs-12">
 						<article class="tile tile-text">
 							<header class="tile-header">
 								<p><small>Branding </small></p>
@@ -1031,52 +1031,12 @@
 				</div><!-- result-list-row --><br/>
 
 				<div class="row results-list-row">
-					<div class="col-md-4 col-xs-12">
+					<div class="col-md-2 col-xs-12">
 						<a class="post-image-link" href="#">
 							<img src="../img/tilex2x.png">
 						</a>
 					</div><!-- /col-xs-2 -->
-					<div class="col-md-8 col-xs-12">
-						<article class="tile tile-text">
-							<header class="tile-header">
-								<p><small>Branding </small></p>
-								<h3 class="tile-title"><a href="http://www.joeldombek.com/work/guaranteed-results-marketing/ ">Guaranteed Results Marketing</a></h3>
-								<p><small>Posted: December 12th 2016 2:49 pm </small></p>
-							</header>
-							<div class="tile-excerpt hidden-xs">
-								<p>This is a project I was creative director on starting with the logo for a internet marketing firm. It’s goal was to create a platform for small business to leverage themselves in an online market. Through a visual redesign and implementation of a CMS (Content Management System) so that SEO (Search Engine Optimization) driven content could easily be added. <a href="LINK">Read&nbsp;more</a></p>
-							</div>
-						</article>
-					</div>
-				</div><!-- result-list-row --><br/>
-
-				<div class="row results-list-row">
-					<div class="col-md-4 col-xs-12">
-						<a class="post-image-link" href="#">
-							<img src="../img/tilex2x.png">
-						</a>
-					</div><!-- /col-xs-2 -->
-					<div class="col-md-8 col-xs-12">
-						<article class="tile tile-text">
-							<header class="tile-header">
-								<p><small>Branding </small></p>
-								<h3 class="tile-title"><a href="http://www.joeldombek.com/work/guaranteed-results-marketing/ ">Guaranteed Results Marketing</a></h3>
-								<p><small>Posted: December 12th 2016 2:49 pm </small></p>
-							</header>
-							<div class="tile-excerpt hidden-xs">
-								<p>This is a project I was creative director on starting with the logo for a internet marketing firm. It’s goal was to create a platform for small business to leverage themselves in an online market. Through a visual redesign and implementation of a CMS (Content Management System) so that SEO (Search Engine Optimization) driven content could easily be added. <a href="LINK">Read&nbsp;more</a></p>
-							</div>
-						</article>
-					</div>
-				</div><!-- result-list-row --><br/>
-
-				<div class="row results-list-row">
-					<div class="col-md-4 col-xs-12">
-						<a class="post-image-link" href="#">
-							<img src="../img/tilex2x.png">
-						</a>
-					</div><!-- /col-xs-2 -->
-					<div class="col-md-8 col-xs-12">
+					<div class="col-md-10 col-xs-12">
 						<article class="tile tile-text">
 							<header class="tile-header">
 								<p><small>Branding </small></p>
