--- a/greybox/pages/new-order.html
+++ b/greybox/pages/new-order.html
@@ -66,6 +66,7 @@
 		<!-- <link rel="stylesheet" href="https://cdn.rawgit.com/google/code-prettify/master/styles/defualt.css"> -->
 
     <link rel='shortlink' href='http://www.joeldombek.com/' />
+		<link rel="shortcut icon" href="http://joeldom.github.io/redesign/greybox/img/favicon.ico" />
     <!-- Top Scripts -->
 		<script src="http://joeldom.github.io/14-redesign/js/modernizr.min.js"></script>
     <script type='text/javascript' src='http://www.joeldombek.com/blog/wp-includes/js/jquery/jquery.js?ver=1.11.3'></script>
