--- a/index.html
+++ b/index.html
@@ -66,6 +66,8 @@
 		<!-- <link rel="stylesheet" href="https://cdn.rawgit.com/google/code-prettify/master/styles/defualt.css"> -->
 
     <link rel='shortlink' href='http://www.joeldombek.com/' />
+		<link rel="shortcut icon" href="http://joeldom.github.io/redesign/greybox/img/favicon.ico" />
+
     <!-- Top Scripts -->
 		<script src="http://joeldom.github.io/14-redesign/js/modernizr.min.js"></script>
     <script type='text/javascript' src='http://www.joeldombek.com/blog/wp-includes/js/jquery/jquery.js?ver=1.11.3'></script>
@@ -74,7 +76,7 @@
 		<script src="https://cdn.rawgit.com/google/code-prettify/master/loader/run_prettify.js?autoload=true&amp;skin=default" defer="defer"></script>
 
   </head>
-	<body class="home page page-id-1281 page-template page-template-template_home page-template-template_home-php">
+	<body class="home page page-id-XXXX page-template page-template-template_home page-template-template_home-php margin-para">
 	<div class="wrapper">
 
     <!-- Navigation Section -->
@@ -402,6 +404,8 @@
 												<li class="quote"><div class="num">Design Quotes N<sup>o</sup> 248</div>Say it with .SCSS</li>
 												<li class="quote"><div class="num">Design Quotes N<sup>o</sup> 249</div>Gain p = mv.</li>
 												<li class="quote"><div class="num">Design Quotes N<sup>o</sup> 250</div><span style="font-family:Consolas, Courier, monospace !important;font-weight:200;">Code is poetry.</span></li>
+												<li class="quote"><div class="num">Design Quotes N<sup>o</sup> 251</div>Go <span style="font-size:2em;font-weight:900;text-transform:uppercase;margin-top:25px;">big</span> or go home.</li>
+												<li class="quote"><div class="num">Design Quotes N<sup>o</sup> 252</div>Be like water my friend.</li>
 											</ul>
 						        </div>
 						      </div>
@@ -424,7 +428,7 @@
 							<br><br><br><br>
 	            <h5 class="palette-grey90" style="text-transform:uppercase;">Featured</h5>
 							<h4><a href="#">Deciding for the User</a></h4>
-	            <p>Content Excerpt from full-length post. Kept at around 140 char and has a link to the full article at the end. This is an excerpt. This can be long, It can be short. It is meant to be a sticky post and special formatted article that uses rich media.<a href="#">Read&nbsp;More</a></p>
+	            <p>Content Excerpt from full-length post. Kept at around 140 char and has a link to the full article at the end. This is an excerpt. This can be long, It can be short. It is meant to be a sticky post and special formatted article that uses rich media. <a href="#">Read&nbsp;More</a></p>
 	          </div>
 					</div>
         </div><!-- /featured -->
@@ -844,7 +848,7 @@
 		<div class="col-xs-12 col-sm-4" style="background-color:grey;">.col-xs-12 .col-sm-4</div>
 	</div>
 </div> -->
-<div class="related-posts bottom-para">
+<div class="related-posts">
   <div class="grid palette-inverse">
 		<div class="grid-inner full-3">
 
@@ -892,7 +896,7 @@
 		<div class="row">
 
 			<footer class="footer" itemscope="" itemtype="http://schema.org/Organization">
-				<!-- <span id="back-top"><a href="#top"><i class="material-icons">keyboard_arrow_up</i></a></span> -->
+				<span id="back-top"><a href="#top"><i class="material-icons">keyboard_arrow_up</i></a></span>
 				<div class="row">
 					<a class="footer-brand col-xs-6 col-sm-2" href="#" itemprop="name"><!-- JOEL<strong>DOMBEK</strong> -->
 					<img src="greybox/img/logo.png" style="width: auto;max-height:75px;padding: 0 25px;"></a>
@@ -937,7 +941,7 @@
 							<div class="col-sm-6 col-xs-12">
 								<p class="text-right">
 									JOEL<strong>DOMBEK</strong><br class="hidden-xs"/>
-									<small>V4.12.08.11.47<br class="hidden-xs"/> &copy; 2016</small></p>
+									<small>V5.4.08.4.45<br class="hidden-xs"/> &copy; 2017</small></p>
 									<br/><br/><br/>
 							</div>
 
