--- a/greybox/pages/new-order.html
+++ b/greybox/pages/new-order.html
@@ -139,7 +139,7 @@
 						          <!-- <div class="num">Design Quotes N<sup>o</sup> <script>document.write(10 + 80);</script></div> -->
 
 						          <ul id="cyclelist">
-												<li class="quote"><div class="num">Design Quotes N<sup>o</sup> 1</div>Delight your audience.</li>
+												<!-- <li class="quote"><div class="num">Design Quotes N<sup>o</sup> 1</div>Delight your audience.</li>
 												<li class="quote"><div class="num">Design Quotes N<sup>o</sup> 2</div>Don't make excuses.</li>
 												<li class="quote"><div class="num">Design Quotes N<sup>o</sup> 3</div>There is no box.</li>
 												<li class="quote"><div class="num">Design Quotes N<sup>o</sup> 4</div>Less is more.</li>
@@ -213,7 +213,7 @@
 												<li class="quote"><div class="num">Design Quotes N<sup>o</sup> 72</div>Give away everything you know.</li>
 												<li class="quote"><div class="num">Design Quotes N<sup>o</sup> 73</div>Usable does not make it beautiful.</li>
 												<li class="quote"><div class="num">Design Quotes N<sup>o</sup> 74</div>Use more #FFFFFF space.</li>
-												<li class="quote"><div class="num">Design Quotes N<sup>o</sup> 75</div>Loading...</li>
+												<li class="quote"><div class="num">Design Quotes N<sup>o</sup> 75</div>Loadinggreybox.</li>
 												<li class="quote"><div class="num">Design Quotes N<sup>o</sup> 76</div>ALL CAPS.</li>
 												<li class="quote"><div class="num">Design Quotes N<sup>o</sup> 77</div>K&nbsp;e&nbsp;r&nbsp;n.</li>
 												<li class="quote"><div class="num">Design Quotes N<sup>o</sup> 78</div>Design creates culture.</li>
@@ -403,6 +403,24 @@
 												<li class="quote"><div class="num">Design Quotes N<sup>o</sup> 248</div>Say it with .SCSS</li>
 												<li class="quote"><div class="num">Design Quotes N<sup>o</sup> 249</div>Gain p = mv.</li>
 												<li class="quote"><div class="num">Design Quotes N<sup>o</sup> 250</div><span style="font-family:Consolas, Courier, monospace !important;font-weight:200;">Code is poetry.</span></li>
+												<li class="quote"><div class="num">Design Quotes N<sup>o</sup> 251</div>Go <span style="font-size:2em;font-weight:900;text-transform:uppercase;margin-top:25px;">big</span> or go home.</li>
+												<li class="quote"><div class="num">Design Quotes N<sup>o</sup> 252</div>Be like water my friend.</li>
+												<li class="quote"><div class="num">Design Quotes N<sup>o</sup> 253</div>init: to win it </li> -->
+												<li class="quote"><div class="num">Design Quotes N<sup>o</sup> 254</div>
+													<span>
+														<pre style="font-family:Consolas, Courier, monospace !important;font-weight:200;font-size:.25em;line-height:1.25em;">
+<span style="color:#ff4646">function</span> <span style="color:orange;">design</span>(){
+  <span style="color:#ff4646;">if</span> (this.$ucks[0] instanceof document.company && !have.contract) {
+    throw new Error('`designer` needs top get one')
+  } <span style="color:#ff4646;">else if</span> (trigger != 'concept') {
+    var eventIn  = trigger == 'hover' ? 'mouseenter' : 'focusin'
+    var eventOut = trigger == 'hover' ? 'mouseleave' : 'focusout'
+
+    this.$element.on(eventIn  + '.' + this.type, this.options.selector, $.proxy(this.enter, this))
+}
+</pre>
+													</span>
+												</li>
 											</ul>
 						        </div>
 						      </div>
