--- a/index.html
+++ b/index.html
@@ -406,6 +406,7 @@
 												<li class="quote"><div class="num">Design Quotes N<sup>o</sup> 250</div><span style="font-family:Consolas, Courier, monospace !important;font-weight:200;">Code is poetry.</span></li>
 												<li class="quote"><div class="num">Design Quotes N<sup>o</sup> 251</div>Go <span style="font-size:2em;font-weight:900;text-transform:uppercase;margin-top:25px;">big</span> or go home.</li>
 												<li class="quote"><div class="num">Design Quotes N<sup>o</sup> 252</div>Be like water my friend.</li>
+												<li class="quote"><div class="num">Design Quotes N<sup>o</sup> 253</div>init: to win it </li>
 											</ul>
 						        </div>
 						      </div>
