--- a/greybox/pages/new-order.html
+++ b/greybox/pages/new-order.html
@@ -139,7 +139,7 @@
 						          <!-- <div class="num">Design Quotes N<sup>o</sup> <script>document.write(10 + 80);</script></div> -->
 
 						          <ul id="cyclelist">
-												<!-- <li class="quote"><div class="num">Design Quotes N<sup>o</sup> 1</div>Delight your audience.</li>
+												<li class="quote"><div class="num">Design Quotes N<sup>o</sup> 1</div>Delight your audience.</li>
 												<li class="quote"><div class="num">Design Quotes N<sup>o</sup> 2</div>Don't make excuses.</li>
 												<li class="quote"><div class="num">Design Quotes N<sup>o</sup> 3</div>There is no box.</li>
 												<li class="quote"><div class="num">Design Quotes N<sup>o</sup> 4</div>Less is more.</li>
@@ -405,7 +405,7 @@
 												<li class="quote"><div class="num">Design Quotes N<sup>o</sup> 250</div><span style="font-family:Consolas, Courier, monospace !important;font-weight:200;">Code is poetry.</span></li>
 												<li class="quote"><div class="num">Design Quotes N<sup>o</sup> 251</div>Go <span style="font-size:2em;font-weight:900;text-transform:uppercase;margin-top:25px;">big</span> or go home.</li>
 												<li class="quote"><div class="num">Design Quotes N<sup>o</sup> 252</div>Be like water my friend.</li>
-												<li class="quote"><div class="num">Design Quotes N<sup>o</sup> 253</div>init: to win it </li> -->
+												<li class="quote"><div class="num">Design Quotes N<sup>o</sup> 253</div>init: to win it;</li>
 												<li class="quote"><div class="num">Design Quotes N<sup>o</sup> 254</div>
 													<span>
 														<pre style="font-family:Consolas, Courier, monospace !important;font-weight:200;font-size:.25em;line-height:1.25em;">
@@ -421,6 +421,16 @@
 </pre>
 													</span>
 												</li>
+												<li class="quote"><div class="num">Design Quotes N<sup>o</sup> 255</div>I am trying to believe.</li>
+												<li class="quote"><div class="num">Design Quotes N<sup>o</sup> 256</div>I want to believe.</li>
+												<li class="quote"><div class="num">Design Quotes N<sup>o</sup> 257</div>Concept. Build. Deliver.</li>
+												<li class="quote"><div class="num">Design Quotes N<sup>o</sup> 258</div>Welcome to the jungle.</li>
+												<li class="quote"><div class="num">Design Quotes N<sup>o</sup> 259</div>Doubt is part of the process.</li>
+												<li class="quote"><div class="num">Design Quotes N<sup>o</sup> 260</div>Apetite For Destruction</li>
+												<li class="quote"><div class="num">Design Quotes N<sup>o</sup> 261</div>...And Justice For All</li>
+												<li class="quote"><div class="num">Design Quotes N<sup>o</sup> 262</div>console.log(cha cha changes);</li>
+												<li class="quote"><div class="num">Design Quotes N<sup>o</sup> 263</div>Lust For Life</li>
+												<li class="quote"><div class="num">Design Quotes N<sup>o</sup> 264</div>Static Age</li>
 											</ul>
 						        </div>
 						      </div>
