re-config repo & void commit

--- a/greybox/pages/temp-single-project.html
+++ b/greybox/pages/temp-single-project.html
@@ -121,7 +121,7 @@
 		</div>
     <!-- End Navigation Section -->
 
-		<div class="row toggle">
+		<div class="toggle">
 			<div class="container">
 				<button href="#collapse1" class="quote-toggle"><i class="material-icons">clear</i></button>
 			</div>
