react test serve/build/dev

--- a/react-redesign/public/index.html
+++ b/react-redesign/public/index.html
@@ -15,9 +15,9 @@
 =============================================  LOOK BUT DON'T TOUCH  =========================================================-->
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-    <link rel="image_src" href="http://www.joeldombek.com/jdimglink.jpg"/>
+    <meta charset="utf-8" />
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="image_src" href="http://www.joeldombek.com/jdimglink.jpg" />
 
     <!-- <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
@@ -27,18 +27,30 @@
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff"> -->
 
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="theme-color" content="#000000">
-    <meta name="description" content="Portfolio of Pittsburgh based Designer & Developer Joel Dombek."/>
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <meta name="theme-color" content="#000000" />
+    <meta
+      name="description"
+      content="Portfolio of Pittsburgh based Designer & Developer Joel Dombek."
+    />
     <meta property="og:locale" content="en_US" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Joel Dombek | Portfolio" />
-    <meta property="og:description" content="Portfolio of Pittsburgh based Web Design Graphic Designer Joel Dombek. Experience in CSS3 HTML5 jQuery Wordpress LESS Git PHP SEO Adsense Adwords Analytics" />
+    <meta
+      property="og:description"
+      content="Portfolio of Pittsburgh based Web Design Graphic Designer Joel Dombek. Experience in CSS3 HTML5 jQuery Wordpress LESS Git PHP SEO Adsense Adwords Analytics"
+    />
     <meta property="og:url" content="http://www.joeldombek.com/" />
     <meta property="og:site_name" content="Joel Dombek | Portfolio" />
     <meta property="fb:admins" content="60713032" />
     <meta name="twitter:card" content="summary" />
-    <meta name="twitter:description" content="Portfolio of Pittsburgh based Web Design Graphic Designer Joel Dombek. Experience in CSS3 HTML5 jQuery Wordpress LESS Git PHP SEO Adsense Adwords Analytics" />
+    <meta
+      name="twitter:description"
+      content="Portfolio of Pittsburgh based Web Design Graphic Designer Joel Dombek. Experience in CSS3 HTML5 jQuery Wordpress LESS Git PHP SEO Adsense Adwords Analytics"
+    />
     <meta name="twitter:title" content="Joel Dombek | Portfolio" />
     <meta name="twitter:site" content="@joeldombek" />
     <meta name="twitter:creator" content="@joeldombek" />
@@ -46,8 +58,14 @@
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
-    <link rel="stylesheet" href="%PUBLIC_URL%../greybox/css/coma.css">
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+      crossorigin="anonymous"
+    />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="stylesheet" href="%PUBLIC_URL%../greybox/css/coma.css" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -60,9 +78,7 @@
     <title>Joel Dombek :: Design</title>
   </head>
   <body>
-    <noscript>
-      You need to enable JavaScript to run this app.
-    </noscript>
+    <noscript> You need to enable JavaScript to run this app. </noscript>
     <div id="root"></div>
     <!--
       This HTML file is a template.
