--- a/splash.html
+++ b/splash.html
@@ -152,85 +152,62 @@
           </div>
         </div>
         <!--/toggle-->
+
+        <div id="quotes" class="module-hero">
+          here 1A1E1C
+        </div>
       </div>
       <!--/wrapper-->
 
-      <div id="collapse1" class="container-fluid palette-darkolive">
+      <div class="container-fluid palette-darkolive">
         <div class="row">
           <div class="col-xs-12">
-            <button
-              href="#collapse1"
-              title="Collapse this section"
-              class="quote-toggle"
-            >
-              <i class="material-icons">clear</i>
-            </button>
+            This here 1A1E1C
           </div>
         </div>
         <div class="row">
-          <div class="col-xs-12 col-sm-4">&emsp;</div>
-          <div class="col-xs-12 col-sm-4">
-            <section class="tile-splash">
-              <p>
-                JOEL<strong>DOMBEK</strong> /名前
-                <span class="tile-detail">v1.2.17</span>
-              </p>
-            </section>
-            <br class="gap" />
+          <div class="col-xs-6 col-sm-3">
+            <img
+              style="width:25%;display:block;text-align:center;margin:2em auto;"
+              src="http://images.contentful.com/80608j6nnju8/16c2ae6QtSSOAeg2wUI68o/a3d913bde47538dadd65e950cca0f3cd/process-sense.svg"
+              alt=""
+            />
           </div>
-          <div class="col-xs-12 col-sm-4">&emsp;</div>
+          <div class="col-xs-6 col-sm-3">
+            <img
+              style="width:25%;display:block;text-align:center;margin:2em auto;"
+              src="http://images.contentful.com/80608j6nnju8/56QrJwZ4HCI6qae2eAUgCA/d81738f6ed1285d0fffbac46cd369ea6/process-define.svg"
+              alt=""
+            />
+          </div>
+          <div class="col-xs-6 col-sm-3">
+            <img
+              style="width:25%;display:block;text-align:center;margin:2em auto;"
+              src="http://images.contentful.com/80608j6nnju8/47w3QhNw6ks4OQcmQwomma/c5c20e354735a1af60d21a9ccd8633c2/process-adapt.svg"
+              alt=""
+            />
+          </div>
+          <div class="col-xs-6 col-sm-3">
+            <img
+              style="width:25%;display:block;text-align:center;margin:2em auto;"
+              src="http://images.contentful.com/80608j6nnju8/40bwBoGLO8u8cqICiqSCgK/955fbb33c4fb1bfb4d44cb52abb6d1f0/process-grow.svg"
+              alt=""
+            />
+          </div>
         </div>
         <div class="row">
-          <div class="col-xs-12 col-sm-4">&emsp;</div>
-          <div class="col-xs-12 col-sm-4">
-            <section class="tile-splash">
-              <p>
-                SITE /地点
-                <span class="tile-detail">v1.2.17</span>
-              </p>
-            </section>
-            <br class="gap" />
-          </div>
-          <div class="col-xs-12 col-sm-4">&emsp;</div>
-        </div>
-        <div class="row">
-          <div class="col-xs-12 col-sm-4">&emsp;</div>
-          <div class="col-xs-12 col-sm-4">
-            <section class="tile-splash">
-              <p>
-                RESUME /履歴書
-                <span class="tile-detail">v1.2.17</span>
-              </p>
-            </section>
-            <br class="gap" />
-          </div>
-          <div class="col-xs-12 col-sm-4">&emsp;</div>
-        </div>
-        <div class="row">
-          <div class="col-xs-12 col-sm-4">&emsp;</div>
-          <div class="col-xs-12 col-sm-4">
-            <section class="tile-splash tile-last">
-              <p>
-                SANDBOX /遊び場
-                <span class="tile-detail">v1.2.17</span>
-              </p>
-            </section>
-            <br class="gap" />
-          </div>
-          <div class="col-xs-12 col-sm-4">&emsp;</div>
-        </div>
-        <!-- <div class="row">
           <div class="col-xs-12 col-sm-4">&emsp;</div>
           <div class="col-xs-12 col-sm-4">
             <figure class="quote">
               <blockquote class="h2">
-                When ever you want to, you can change everything.
+                Write content while you are designing.
               </blockquote>
             </figure>
+            <!-- <div class="loader"></div> -->
             <br class="gap" />
           </div>
           <div class="col-xs-12 col-sm-4">&emsp;</div>
-        </div> -->
+        </div>
       </div>
 
       <section class="home-lead section--1">
@@ -309,21 +286,12 @@
               </div>
             </div>
           </div>
-          <!-- <span id="back-top2">
-            <a class="back-top" href="#top">
-              <span
-                style="font-size:2em;line-height:1em; transform: scale(2, .5);"
-                ><i class="material-icons">arrow_drop_up</i></span
-              ><br />
-              Back to Top
-            </a>
-          </span> -->
         </div>
       </section>
 
       <!-- COMA -->
 
-      <!-- <div class="wrapper">
+      <div class="wrapper">
         <span id="back-top2">
           <a class="back-top" href="#top">
             <span
@@ -333,7 +301,7 @@
             Back to Top
           </a>
         </span>
-      </div> -->
+      </div>
       <!--/wrapper-->
 
       <div class="related-posts">
