--- a/index.html
+++ b/index.html
@@ -137,15 +137,6 @@
         </div> -->
         <!-- / Nav Section -->
 
-        <!--toggle-->
-        <!-- <div class="toggle">
-          <div class="container">
-            <button href="#collapse1" class="quote-toggle">
-              Collapse section &nbsp;<i class="material-icons">clear</i>
-            </button>
-          </div>
-        </div> -->
-        <!--/toggle-->
         <div class="toggle">
           <div class="container-fluid">
             <button
@@ -162,83 +153,122 @@
 
       <div id="collapse1" class="container-fluid palette-darkolive">
         <div class="row">
-          <div class="col-xs-12 col-sm-4 visible-md">&emsp;</div>
+          <div class="col-xs-12 col-sm-4 visible-md visible-lg">&emsp;</div>
           <div class="col-xs-12 col-sm-4">
             <section class="tile-spacer">
               <p>
                 &emsp;
               </p>
             </section>
-            <br class="gap" />
+            <br class="gap visible-lg" />
           </div>
-          <div class="col-xs-12 col-sm-4 visible-md">&emsp;</div>
+          <div class="col-xs-12 col-sm-4 visible-md visible-lg">&emsp;</div>
         </div>
         <div class="row">
-          <div class="col-xs-12 col-sm-4 visible-md">&emsp;</div>
-          <div class="col-xs-12 col-sm-4">
-            <section class="tile-splash">
-              <a href="http://www.joeldombek.com/work/">
+          <div
+            class="col-xs-12 col-sm-2 col-md-4 visible-sm visible-md visible-lg"
+          >
+            &emsp;
+          </div>
+          <div class="col-xs-12 col-sm-8 col-md-4">
+            <section class="tile-splash first">
+              <a href="http://www.joeldombek.com/">
                 <p>
                   JOEL<strong>DOMBEK</strong> /名前
+                  <!-- <span class="tile-detail">v1.2.17</span> -->
+                </p>
+              </a>
+            </section>
+            <br class="gap visible-md visible-lg" />
+          </div>
+          <div class="col-xs-12 col-sm-4 col-md-12 col-lg-12">&emsp;</div>
+        </div>
+        <div class="row">
+          <div
+            class="col-xs-12 col-sm-2 col-md-4 visible-sm visible-md visible-lg"
+          >
+            &emsp;
+          </div>
+          <div class="col-xs-12 col-sm-8 col-md-4">
+            <section class="tile-splash">
+              <a href="http://joeldom.github.io/redesign/">
+                <p>
+                  SITE /地点
                   <span class="tile-detail">v1.2.17</span>
                 </p>
               </a>
             </section>
-            <br class="gap visible-md" />
+            <br class="gap visible-md visible-lg" />
           </div>
-          <div class="col-xs-12 col-sm-4">&emsp;</div>
+          <div class="col-xs-12 col-sm-4 col-md-12 col-lg-12">&emsp;</div>
         </div>
         <div class="row">
-          <div class="col-xs-12 col-sm-4">&emsp;</div>
-          <div class="col-xs-12 col-sm-4">
+          <div
+            class="col-xs-12 col-sm-2 col-md-4 visible-sm visible-md visible-lg"
+          >
+            &emsp;
+          </div>
+          <div class="col-xs-12 col-sm-8 col-md-4">
             <section class="tile-splash">
-              <p>
-                SITE /地点
-                <span class="tile-detail">v1.2.17</span>
-              </p>
+              <a href="https://joeldom.github.io/resume/">
+                <p>
+                  RESUME /履歴書
+                  <span class="tile-detail">v1.2.17</span>
+                </p>
+              </a>
             </section>
-            <br class="gap visible-md" />
+            <br class="gap visible-md visible-lg" />
           </div>
-          <div class="col-xs-12 col-sm-4">&emsp;</div>
+          <div class="col-xs-12 col-sm-4 col-md-12 col-lg-12">&emsp;</div>
         </div>
         <div class="row">
-          <div class="col-xs-12 col-sm-4">&emsp;</div>
-          <div class="col-xs-12 col-sm-4">
-            <section class="tile-splash">
-              <p>
-                RESUME /履歴書
-                <span class="tile-detail">v1.2.17</span>
-              </p>
-            </section>
-            <br class="gap visible-md" />
+          <div
+            class="col-xs-12 col-sm-2 col-md-4 visible-sm visible-md visible-lg"
+          >
+            &emsp;
           </div>
-          <div class="col-xs-12 col-sm-4">&emsp;</div>
-        </div>
-        <div class="row">
-          <div class="col-xs-12 col-sm-4">&emsp;</div>
-          <div class="col-xs-12 col-sm-4">
+          <div class="col-xs-12 col-sm-8 col-md-4">
             <section class="tile-splash tile-last">
-              <p>
-                SANDBOX /遊び場
-                <span class="tile-detail">v1.2.17</span>
-              </p>
+              <a href="https://joeldom.github.io/sandbox/">
+                <p>
+                  SANDBOX /遊び場
+                  <span class="tile-detail">v1.2.17</span>
+                </p>
+              </a>
             </section>
-            <br class="gap" />
+            <br class="gap visible-lg" />
           </div>
           <div class="col-xs-12 col-sm-4">&emsp;</div>
         </div>
-        <!-- <div class="row">
+        <div class="row">
           <div class="col-xs-12 col-sm-4">&emsp;</div>
-          <div class="col-xs-12 col-sm-4">
+          <div
+            class="col-xs-12 col-sm-8 col-sm-pull-2 col-md-8 col-md-pull-2 padding-left-large padding-right-large"
+          >
             <figure class="quote">
-              <blockquote class="h2">
+              <blockquote class="h2" style="text-align: center;">
                 When ever you want to, you can change everything.
               </blockquote>
+              <!-- <span style="width: 100%; display: block; text-align:right;"
+                >Joel</span
+              > -->
             </figure>
             <br class="gap" />
           </div>
           <div class="col-xs-12 col-sm-4">&emsp;</div>
-        </div> -->
+        </div>
+        <div class="row">
+          <div class="col-xs-12 col-sm-4">&emsp;</div>
+          <div class="col-xs-12 col-sm-4">
+            <!-- <figure class="quote">
+              <blockquote class="h2">
+                When ever you want to, you can change everything.
+              </blockquote>
+            </figure> -->
+            <br class="gap" />
+          </div>
+          <div class="col-xs-12 col-sm-4">&emsp;</div>
+        </div>
       </div>
 
       <div class="toggle">
@@ -432,8 +462,8 @@
                   itemprop="name"
                   ><!-- JOEL<strong>DOMBEK</strong> -->
                   <img
-                    src="greybox/img/logo.png"
-                    style="width: auto;max-height:75px;padding: 0 25px;"
+                    src="https://raw.githubusercontent.com/joeldom/asset/main/logos/bubble-90-mono-logo.png"
+                    style="width: auto;max-height:90px;padding: 0 25px;"
                 /></a>
 
                 <!-- <div class="col-xs-6 col-sm-2">
