--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
         rel="stylesheet"
         href="http://joeldom.github.io/redesign/greybox/css/coma.css"
       />
-      <link rel="stylesheet" href="css/tao.css" />
+      <link
+        rel="stylesheet"
+        href="http://joeldom.github.io/redesign/css/tao.css"
+      />
       <!-- Font Links -->
       <link
         rel="stylesheet"
@@ -552,9 +555,9 @@
       <!-- footer-para -->
 
       <!-- Scripts -->
-      <script src="greybox/js/main.js"></script>
-      <script src="greybox/js/void__quotes.js"></script>
-      <script src="greybox/js/contact.js"></script>
+      <script src="http://joeldom.github.io/redesign/greybox/js/main.js"></script>
+      <script src="http://joeldom.github.io/redesign/greybox/js/void__quotes.js"></script>
+      <script src="http://joeldom.github.io/redesign/greybox/js/contact.js"></script>
       <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"</script> -->
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     </body>
