--- a/index.html
+++ b/index.html
@@ -14,6 +14,21 @@
         name="viewport"
         content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"
       />
+      <meta property="og:title" content="My Title" />
+      <meta
+        property="og:image"
+        content="URL to the image you want in the preview, LinkedIn recommends a 1.91:1 ratio (1200x627px)"
+      />
+      <meta
+        property="og:description"
+        content="This should be a very short description"
+      />
+      <meta
+        name="twitter:card"
+        content="summary || summary_large_image || player || app"
+      />
+      <meta name="twitter:creator" content="@username-example" />
+
       <title>JOEL DOMBEK DESIGN</title>
 
       <link
