--- a/index.html
+++ b/index.html
@@ -35,10 +35,7 @@
         rel="stylesheet"
         href="https://joeldom.github.io/redesign/greybox/css/coma.css"
       />
-      <link
-        rel="stylesheet"
-        href="https://joeldom.github.io/redesign/css/tao.css"
-      />
+      <link rel="stylesheet" href="./css/tao.css" />
       <!-- Font Links -->
       <link
         rel="stylesheet"
@@ -52,6 +49,9 @@
         rel="stylesheet"
         href="https://fonts.googleapis.com/icon?family=Material+Icons"
       />
+      <link rel="preconnect" href="https://fonts.googleapis.com">
+      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+      <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
       <!-- <link rel="stylesheet" href="css/breadcrumb.css"> -->
       <link rel="shortlink" href="https://www.joeldombek.com/" />
       <!-- Top Scripts -->
@@ -68,6 +68,8 @@
         type="text/javascript"
         src="https://joeldom.github.io/redesign/greybox/js/typed.min.js"
       ></script>
+      <script src="https://unpkg.com/freezeframe/dist/freezeframe.min.js"></script>
+      <link rel="stylesheet" href="https://unpkg.com/freezeframe@3.0.10/build/css/freezeframe_styles.min.css">
     </head>
     <body
       class="home page page-template page-template-template_home page-template-template_home-php margin-para"
@@ -169,7 +171,7 @@
       </div>
       <!--/wrapper-->
 
-      <div id="collapse1" class="container-fluid palette-darkolive">
+      <div id="collapse1" class="container-fluid palette-darkolive pattern-bg">
         <div class="row">
           <div class="col-xs-12 col-sm-4 visible-md visible-lg">&emsp;</div>
           <div class="col-xs-12 col-sm-4">
@@ -194,6 +196,22 @@
                 <p>
                   JOEL<strong>DOMBEK</strong> /名前
                   <!-- <span class="tile-detail">v1.2.17</span> -->
+                  <svg
+                    focusable="false"
+                    preserveAspectRatio="xMidYMid meet"
+                    xmlns="http://www.w3.org/2000/svg"
+                    fill="red"
+                    aria-hidden="true"
+                    width="20"
+                    height="20"
+                    viewBox="0 0 20 20"
+                    class=""
+                  >
+                    <!---->
+                    <path
+                      d="M11.8 2.8L10.8 3.8 16.2 9.3 1 9.3 1 10.7 16.2 10.7 10.8 16.2 11.8 17.2 19 10z"
+                    ></path>
+                  </svg>
                 </p>
               </a>
             </section>
@@ -212,7 +230,22 @@
               <a href="https://joeldom.github.io/redesign/">
                 <p>
                   SITE /地点
-                  <span class="tile-detail">v1.2.17</span>
+                  <span class="tile-detail">v2.1.23</span><br>
+                  <svg
+                    focusable="false"
+                    preserveAspectRatio="xMidYMid meet"
+                    xmlns="http://www.w3.org/2000/svg"
+                    fill="#1a3acc"
+                    aria-hidden="true"
+                    width="20"
+                    height="20"
+                    viewBox="0 0 20 20"
+                    class="inline"
+                  >
+                    <!---->
+                    <path
+                      d="M11.8 2.8L10.8 3.8 16.2 9.3 1 9.3 1 10.7 16.2 10.7 10.8 16.2 11.8 17.2 19 10z"
+                    ></path>
                 </p>
               </a>
             </section>
@@ -231,7 +264,22 @@
               <a href="https://joeldom.github.io/resume/">
                 <p>
                   RESUME /履歴書
-                  <span class="tile-detail">v1.2.17</span>
+                  <span class="tile-detail">v2.1.23</span><br>
+                  <svg
+                    focusable="false"
+                    preserveAspectRatio="xMidYMid meet"
+                    xmlns="http://www.w3.org/2000/svg"
+                    fill="#1a3acc"
+                    aria-hidden="true"
+                    width="20"
+                    height="20"
+                    viewBox="0 0 20 20"
+                    class="inline"
+                  >
+                    <!---->
+                    <path
+                      d="M11.8 2.8L10.8 3.8 16.2 9.3 1 9.3 1 10.7 16.2 10.7 10.8 16.2 11.8 17.2 19 10z"
+                    ></path>
                 </p>
               </a>
             </section>
@@ -250,7 +298,22 @@
               <a href="https://joeldom.github.io/sandbox/">
                 <p>
                   SANDBOX /遊び場
-                  <span class="tile-detail">v1.2.17</span>
+                  <span class="tile-detail">v1.2.17</span><br>
+                  <svg
+                    focusable="false"
+                    preserveAspectRatio="xMidYMid meet"
+                    xmlns="http://www.w3.org/2000/svg"
+                    fill="#1a3acc"
+                    aria-hidden="true"
+                    width="20"
+                    height="20"
+                    viewBox="0 0 20 20"
+                    class="inline"
+                  >
+                    <!---->
+                    <path
+                      d="M11.8 2.8L10.8 3.8 16.2 9.3 1 9.3 1 10.7 16.2 10.7 10.8 16.2 11.8 17.2 19 10z"
+                    ></path>
                 </p>
               </a>
             </section>
@@ -305,7 +368,17 @@
                 <div
                   class="col-xs-12 col-sm-6 palette-brandblue palette-inverse"
                 >
-                  <img src="greybox/img/tilex2x.png" class="" alt="" />
+                  <!-- <img src="greybox/img/tilex2x.png" class="" alt="" /> -->
+                  <img class="freezeframe-1" src="https://media1.tenor.com/images/371f9f39bf86b53a2de6468e7bf142d4/tenor.gif" />
+                  <!-- <img class="freezeframe-1" src="https://www.sciencealert.com/images/2019-11/processed/nasa-poles-animation_600.gif" /> -->
+                  <!-- <img class="freezeframe-1" src="https://giffiles.alphacoders.com/166/16604.gif" /> -->
+                  <!-- <img class="freezeframe-1" src="https://data.whicdn.com/images/247143683/original.gif" /> -->
+                  <script>
+                    new Freezeframe({
+                      selector: '.freezeframe-1',
+                      //trigger: 'click'
+                    });
+                  </script>
                 </div>
                 <div
                   class="col-xs-12 col-sm-6 palette-brandblue palette-inverse"
@@ -339,6 +412,7 @@
                   class="col-xs-12 col-sm-6 palette-brandblue palette-inverse"
                 >
                   <div class="content">
+                    <img style="padding:0 0 4em 0em" src="https://raw.githubusercontent.com/joeldom/asset/main/2023-year.png"/>
                     <figure class="quote">
                       <blockquote class="h2">
                         We believe that using an approach such as experience
@@ -480,7 +554,7 @@
                   itemprop="name"
                   ><!-- JOEL<strong>DOMBEK</strong> -->
                   <img
-                    src="https://raw.githubusercontent.com/joeldom/asset/main/logos/bubble-90-mono-logo.png"
+                    src="https://raw.githubusercontent.com/joeldom/asset/main/chip-logo.png"
                     style="width: auto;max-height:90px;padding: 0 25px;"
                 /></a>
 
@@ -575,6 +649,7 @@
       <script src="https://joeldom.github.io/redesign/greybox/js/contact.js"></script>
       <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"</script> -->
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+      <script src="js/typed-content.js"></script>
     </body>
   </html>
 </html>
