img placeholders test

--- a/index.html
+++ b/index.html
@@ -440,15 +440,17 @@
                   </div>
                 </div>
                 <div class="col-xs-12 col-sm-6">
-                  <img src="greybox/img/tilex2x.png" class="" alt="" />
+                  <img src="https://raw.githubusercontent.com/joeldom/asset/main/placeholder.png" class="" alt="" />
                   <!-- <div class="embed-container"><iframe style="width:100%;min-height:450px;" src="https://player.vimeo.com/video/196566387?background=1" frameborder="0" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen=""></iframe></div> -->
                   <br class="gap" />
                   <div class="row">
                     <div class="col-sm-6">
-                      <img src="greybox/img/tilex2x.png" class="" alt="" />
+                      <img src="https://raw.githubusercontent.com/joeldom/asset/main/placeholder-logo.png" class="" alt="" />
                     </div>
                     <div class="col-sm-6">
-                      <img src="greybox/img/tilex2x.png" class="" alt="" />
+                      <img src="https://raw.githubusercontent.com/joeldom/asset/main/placeholder-privacy.png" class="" alt="" />
+
+                      <!-- <img src="greybox/img/tilex2x.png" class="" alt="" /> -->
                     </div>
                   </div>
                 </div>
