--- a/index.html
+++ b/index.html
@@ -497,7 +497,7 @@
               >
                 <div class="article-inner">
                   <h3 class="cat">Products</h3>
-                  <h2>The Tyler Durden Philosophy of Product Design</h2>
+                  <h2>Digita; product design examples from various industries.</h2>
                 </div>
               </a>
             </article>
@@ -589,7 +589,41 @@
                 </div>
                 <div class="col-xs-12 col-sm-3 col-sm-offset-2">
                   <div class="row">
-                    <div class="col-sm-6 col-xs-12">
+                    <div class="col-sm-4 col-xs-12">
+                      <!-- <a href="https://www.joeldombek.com/contact/"><strong itemprop="name">Contact</strong></a><br> -->
+                      <ul class="list-unstyled">
+                        <!-- <li><a href="#" target="_blank"><i class="fa fa-facebook-official"></i> Facebook</a></li> -->
+                        <li>
+                          <a
+                            href="https://www.instagram.com/joeld/"
+                            target="_blank"
+                            ><i class="material-icons">psychology</i><span class="hidden-xs"> About me</span></a
+                          >
+                        </li>
+                        <li>
+                          <a
+                            href="https://joeldom.github.io/style-guide/"
+                            target="_blank"
+                            ><i class="material-icons">palette</i><span class="hidden-xs"> Style Guide</span></a
+                          >
+                        </li>
+                        <li>
+                          <a
+                            href="https://www.linkedin.com/in/joel-dombek-6b056828/"
+                            target="_blank"
+                            ><i class="fa fa-linkedin"></i
+                            ><span class="hidden-xs"> LinkedIn</span></a
+                          >
+                        </li>
+                        <li>
+                          <a href="https://joeldom.github.io/resume/"
+                            ><i class="fa fa-file-pdf-o"></i
+                            ><span class="hidden-xs"> Resume</span></a
+                          >
+                        </li>
+                      </ul>
+                    </div>
+                    <div class="col-sm-4 col-xs-12">
                       <!-- <a href="https://www.joeldombek.com/contact/"><strong itemprop="name">Contact</strong></a><br> -->
                       <ul class="list-unstyled">
                         <!-- <li><a href="#" target="_blank"><i class="fa fa-facebook-official"></i> Facebook</a></li> -->
@@ -626,12 +660,12 @@
                       </ul>
                     </div>
 
-                    <div class="col-sm-6 col-xs-12">
+                    <div class="col-sm-4 col-xs-12">
                       <p class="text-right">
                         JOEL<strong>DOMBEK</strong><br class="hidden-xs" />
                         <small
-                          >V7.02.07.20.13<br class="hidden-xs" />
-                          &copy; 2022</small
+                          >V7.02.07.20.23<br class="hidden-xs" />
+                          &copy; 2023</small
                         >
                       </p>
                       <br /><br /><br />
